@@ -1,5 +1,15 @@
 2008-06-09  Patrick Spendrin    <ps_ml@gmx.de>
 
+    * CMakeLists.txt
+    * src/lib/CMakeLists.txt
+    * src/lib/tests/CMakeLists.txt
+    * src/lib/tests/PluginManagerTest.cpp
+
+    add first Unittest for the PluginManager (which currently fails under 
+    Windows)
+
+2008-06-09  Patrick Spendrin    <ps_ml@gmx.de>
+
     * src/plugins/designer/marblewidget/CMakeLists.txt
     * src/plugins/designer/navigator/CMakeLists.txt
     * src/plugins/marble/compass/CMakeLists.txt
